05_squares/grade.txt
Grading at Sun Sep 13 05:15:38 UTC 2020
Trying to compile your code and link with squares_test.o
squares.c: In function ‘squares’:
squares.c:52:110: error: implicit declaration of function ‘isAtBorrder’ [-Werror=implicit-function-declaration]
    if ((isInRange(x, x_offset, size2) && isAtBorder(y,y_offset,size2-1)) || (isInRange(y,y_offset,size2) && (isAtBorrder(x,x_offset,size2-1))))
                                                                                                              ^
squares.c:57:70: error: lvalue required as left operand of assignment
      if ((x<size1 && (y==0 || y==size1-1)) || ((y<size1) && (x==0 ||x=size1-1)))
                                                                      ^
cc1: all warnings being treated as errors
Could not compile your code

Overall Grade: FAILED
